--- a/feature/home/compose/build.gradle
+++ b/feature/home/compose/build.gradle
@@ -1,7 +1,14 @@
 apply plugin: 'com.android.library'
 apply from: rootProject.file("gradle/view-common.gradle")
 
+android {
+    viewBinding {
+        enabled = true
+    }
+}
+
 dependencies {
     implementation project(':common:model')
     implementation project(':viewCommon')
+    implementation libs.compose.ui.viewbinding
 }
