--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ core = 'androidx.core:core-ktx:1.7.0'
 appcompat = 'androidx.appcompat:appcompat:1.4.1'
 material = 'com.google.android.material:material:1.5.0'
 compose-ui-ui = { module = 'androidx.compose.ui:ui', version.ref = 'compose' }
+compose-ui-viewbinding = { module = 'androidx.compose.ui:ui-viewbinding', version.ref = 'compose' }
 compose-material = { module = 'androidx.compose.material:material', version.ref = 'compose' }
 compose-ui-preview = { module = 'androidx.compose.ui:ui-tooling-preview', version.ref = 'compose' }
 compose-ui-tooling = { module = 'androidx.compose.ui:ui-tooling', version.ref = 'compose' }
