--- a/feature/home/compose/build.gradle
+++ b/feature/home/compose/build.gradle
@@ -11,4 +11,5 @@ dependencies {
     implementation project(':common:model')
     implementation project(':viewCommon')
     implementation libs.compose.ui.viewbinding
+    implementation libs.play.services.ads
 }
