--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,5 @@ dependencies {
     implementation project(':feature:info:view')
     implementation libs.navigation.compose
     implementation libs.hilt.navigation.compose
+    implementation libs.play.services.ads
 }
