--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+
     <application
         android:name="com.tfandkusu.androidview.util.MyApplication"
         android:allowBackup="true"
@@ -16,6 +18,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTemplate"
         tools:targetApi="s">
+
+        <!-- Sample AdMob app ID -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713"/>
+
+
         <activity
             android:name="com.tfandkusu.androidview.view.main.MainActivity"
             android:exported="true"
