--- a/feature/home/compose/src/main/AndroidManifest.xml
+++ b/feature/home/compose/src/main/AndroidManifest.xml
@@ -2,4 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tfandkusu.androidview.home.compose">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
